services/proxy/k8s/demo/ingress-backend-results.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elia-proxy-ingress-backend-results
  annotations:
    traefik.frontend.priority: "1"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: results.brainelem.com
      http:
        paths:
          - path: /api/v1/users/cognitive-report
            pathType: Prefix
            backend:
              service:
                name: demo-elia-backend
                port:
                  number: 80
  tls:
    - hosts:
      - results.brainelem.com
      secretName: elia-demo-certificates
